renamed orange soda to pumpkin soda

--- a/src/main/resources/assets/fizzydrinksremastered/lang/en_us.json
+++ b/src/main/resources/assets/fizzydrinksremastered/lang/en_us.json
@@ -5,10 +5,10 @@
   "item.fizzydrinksremastered.root_beer": "Root Beer",
   "item.fizzydrinksremastered.cocoa_soda": "Cocoa Soda",
   "item.fizzydrinksremastered.mushroom_soda": "Mushroom Soda",
-  "item.fizzydrinksremastered.cream_orange_soda": "Cream Orange Soda",
-  "item.fizzydrinksremastered.orange_soda": "Orange Soda",
+  "item.fizzydrinksremastered.cream_pumpkin_soda": "Cream Pumpkin Soda",
+  "item.fizzydrinksremastered.pumpkin_soda": "Pumpkin Soda",
   "item.fizzydrinksremastered.golden_apple_soda": "Golden Apple Soda",
-  "item.fizzydrinksremastered.spiked_orange_soda": "Spiked Orange Soda",
+  "item.fizzydrinksremastered.spiked_pumpkin_soda": "Spiked Pumpkin Soda",
   "item.fizzydrinksremastered.slurm": "Slurm",
   "item.fizzydrinksremastered.diamond_soda": "Diamond Soda",
   "item.fizzydrinksremastered.soda_bottle": "Soda Bottle",
