changed recipes. Added a new item : Filled Soda Bottle right click on water to use.

--- a/src/main/resources/assets/fizzydrinksremastered/lang/en_us.json
+++ b/src/main/resources/assets/fizzydrinksremastered/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.fizzydrinksremastered.slurm": "Slurm",
   "item.fizzydrinksremastered.diamond_soda": "Diamond Soda",
   "item.fizzydrinksremastered.soda_bottle": "Soda Bottle",
+  "item.fizzydrinksremastered.filled_soda_bottle": "Filled Soda Bottle",
 
   "creativetab.fizzy_drinks_tab": "Fizzy Drinks Remastered"
 
